2010-03-15  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/sparc.xml, driver/nwp533.xml: Removed driver entries for
	  Ghostscript drivers which do not build on standard Linux/Unix
	  systems. There are also no printer entries for these nor any
	  execution details or comments.

	* driver/la70t.xml: Removed driver entry for an output device
	  which was removed from Ghostscript years ago. It is a remainder
	  from the initial creation of a driver list when the Foomatic
	  project was started.


2010-03-15  OpenPrinting Web Server <webmaster@openprinting.org>

	* db/source/driver/lj5gray.xml,
	  db/source/opt/2.xml,
	  db/source/opt/cdj690X-Resolution.xml,
	  db/source/printer/Gestetner-MP_2851.xml,
	  db/source/printer/Gestetner-MP_3351.xml,
	  db/source/printer/Gestetner-MP_4001.xml,
	  db/source/printer/Gestetner-MP_5001.xml,
	  db/source/printer/Gestetner-MP_C6501.xml,
	  db/source/printer/Gestetner-MP_C7501.xml,
	  db/source/printer/Gestetner-SP_6330N.xml,
	  db/source/printer/Infotec-MP_2851.xml,
	  db/source/printer/Infotec-MP_3351.xml,
	  db/source/printer/Infotec-MP_4001.xml,
	  db/source/printer/Infotec-MP_5001.xml,
	  db/source/printer/Infotec-MP_C6501.xml,
	  db/source/printer/Infotec-MP_C7501.xml,
	  db/source/printer/Lanier-LP235N.xml,
	  db/source/printer/Lanier-MP_2851_LD528.xml,
	  db/source/printer/Lanier-MP_3351_LD533.xml,
	  db/source/printer/Lanier-MP_4001_LD140.xml,
	  db/source/printer/Lanier-MP_5001_LD150.xml,
	  db/source/printer/Lanier-MP_C6501_LD365C.xml,
	  db/source/printer/Lanier-MP_C7501_LD375C.xml,
	  db/source/printer/Lanier-SP_6330N.xml,
	  db/source/printer/NRG-MP_2851.xml,
	  db/source/printer/NRG-MP_3351.xml,
	  db/source/printer/NRG-MP_4001.xml,
	  db/source/printer/NRG-MP_5001.xml,
	  db/source/printer/NRG-MP_C6501.xml,
	  db/source/printer/NRG-MP_C7501.xml,
	  db/source/printer/NRG-SP_6330N.xml,
	  db/source/printer/Ricoh-Aficio_MP_2851.xml,
	  db/source/printer/Ricoh-Aficio_MP_3351.xml,