@@ -96,6 +96,34 @@
       <id>printer/Samsung-CLP-300</id>
     </printer>
     <printer>
+      <id>printer/Samsung-CLP-310</id>
+      <comments>
+	<en>
+
+	  Works with the SpliX PPD file for the CLP-300. Color output
+	  better than with foo2qpdl. Use the SpliX package here from
+	  OpenPrinting and not the one coming with your distribution,
+	  as this printer uses potentially patented algorithms which
+	  are not shipped in the distribution's packages.
+
+	</en>
+      </comments>
+    </printer>
+    <printer>
+      <id>printer/Samsung-CLP-315</id>
+      <comments>
+	<en>
+
+	  Works with the SpliX PPD file for the CLP-300. Color output
+	  better than with foo2qpdl. Use the SpliX package here from
+	  OpenPrinting and not the one coming with your distribution,
+	  as this printer uses potentially patented algorithms which
+	  are not shipped in the distribution's packages.
+
+	</en>
+      </comments>
+    </printer>
+    <printer>
       <id>printer/Samsung-CLP-500</id>
     </printer>
     <printer>
