@@ -26,42 +26,38 @@
     <proprietary />
   </lang>
   <functionality>B</functionality>
-  <driver>foo2qpdl</driver>
+  <driver>splix</driver>
   <comments>
     <en>
 
-    The Samsung CLP-300 is USB-only and the Samsung CLP-300N has a
-    network connector.&lt;p&gt;
+      The Samsung CLP-300 is USB-only and the Samsung CLP-300N has a
+      network connector.&lt;p&gt;
 
-    This is a cheap color laser printer with a proprietary
-    language. Samsung provides a closed-source driver on their web
-    site, the &quot;Unified Linux Driver&quot;, a driver package containing CUPS
-    drivers and PPDs for all Samsung printers. Version 2.00.90 and
-    newer supports also this printer. Output is raster-only, and due
-    to glitches in the software, monochrome sources are output as
-    color (visible flecks of cyan, magenta, and yellow). It is also
-    not easy to install this driver in arbitrary distributions. See
-    the user reports in the &lt;a
-    href=&quot;show_printer.cgi?recnum=Samsung-CLP-510&quot;&gt;entry
-    for the CLP-510&lt;/a&gt;.&lt;p&gt;
+      This is a cheap color laser printer with a proprietary
+      language. Samsung provides a closed-source driver on their web
+      site, the &quot;Unified Linux Driver&quot;, a driver package
+      containing CUPS drivers and PPDs for all Samsung
+      printers. Version 2.00.90 and newer supports also this
+      printer. Output is raster-only, and due to glitches in the
+      software, monochrome sources are output as color (visible flecks
+      of cyan, magenta, and yellow). It is also not easy to install
+      this driver in arbitrary distributions. See the user reports in
+      the &lt;a
+      href=&quot;show_printer.cgi?recnum=Samsung-CLP-510&quot;&gt;entry
+      for the CLP-510&lt;/a&gt;.&lt;p&gt;
 
-    As the first free software printer driver Rick Richardson's
-    foo2qpdl supports this printer, but the driver still needs
-    testing. So please try out this printer with both foo2qpdl and
-    SpliX and report your results to the authors of the
-    drivers and here on the site.&lt;p&gt;&lt;p&gt;
+      As the first free software printer driver Rick Richardson's
+      foo2qpdl supports this printer, but the driver still needs
+      testing. So please try out this printer with both foo2qpdl and
+      SpliX and report your results to the authors of the drivers and
+      here on the site. SpliX seems to produce better color
+      output.&lt;p&gt;
 
-      Consumables/Refills: Toner Black (2000 prints) - $54
-		Toner Yellow (1000 prints) - $45
-		Toner Magenta (1000 prints) - $45
-		Toner Cyan (1000 prints) - $45
-		Waste Toner (5000 prints) - $10
-		Drum Kit (20000 prints) - $96 Part numbers: CLP-K300A, 
-	    CLP-Y300A, 
-	    CLP-M300A, 
-	    CLP-C300A, 
-	    CLP-W300A, 
-	    CLP-R300A&lt;p&gt;
+      Consumables/Refills: Toner Black (2000 prints) - $54, Toner
+      Yellow (1000 prints) - $45, Toner Magenta (1000 prints) - $45,
+      Toner Cyan (1000 prints) - $45, Waste Toner (5000 prints) - $10,
+      Drum Kit (20000 prints) - $96 Part numbers: CLP-K300A,
+      CLP-Y300A, CLP-M300A, CLP-C300A, CLP-W300A, CLP-R300A&lt;p&gt;
 
     </en>
   </comments>
