@@ -1,6 +1,6 @@
-<printer id="printer/Samsung-CLP-315">
+<printer id="printer/Samsung-CLP-310">
   <make>Samsung</make>
-  <model>CLP-315</model>
+  <model>CLP-310</model>
   <mechanism>
     <laser />
     <color />
@@ -30,17 +30,12 @@
   <comments>
     <en>
 
-      The Samsung CLP-315 (USB) and Samsung CLP-315W (Net) are color laser
-      printers with a 2008 street price of $159 USD and $249 USD.
+      The Samsung CLP-310 (USB) is a cheap color laser
+      printer.&lt;p&gt;
 
       This printer is compatible with the CLP-300 and is supported by
       the SpliX and foo2qpdl open software printer drivers. SpliX
       gives a better color output.&lt;p&gt;
-
-      The CLP-315 is auto-detected as a CLP-310, but do not worry
-      about that automatic printer setups use the PPD files for
-      CLP-310, the two printers are compatible with each
-      other.&lt;p&gt;
 
       Consumables/Refills: Toner Black (2000 prints) - $54, Toner
       Yellow (1000 prints) - $45, Toner Magenta (1000 prints) - $45,
