@@ -1,3 +1,12 @@
+2010-03-22  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/splix.xml, printer/Samsung-CLP-300.xml,
+	  printer/Samsung-CLP-310.xml, printer/Samsung-CLP-315.xml: The
+	  Samsung CLP-300, CLP-310, CLP-315, are compatible with each other,
+	  added entry for the CLP-300, added CLP-315 to the "splix" driver,
+	  updated the texts and made "splix" the recommended driver for all
+	  the three.
+
 2010-03-15  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/sparc.xml, driver/nwp533.xml: Removed driver entries for
